--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 
       <!-- Snacks are injected into row below -->
       <div class="row" id="snacks-display"></div>
+      <div class="row text-center">
+        <div class="col-12" id="purchased-snacks">
+          <h3>Last Snack Purchased:</h3>
+        </div>
+      </div>
     </main>
 
     <!-- Optional JavaScript -->
